Update manifest to point to github for doc

--- a/custom_components/nationalrailuk/manifest.json
+++ b/custom_components/nationalrailuk/manifest.json
@@ -2,7 +2,7 @@
     "domain": "nationalrailuk",
     "name": "National Rail UK",
     "config_flow": true,
-    "documentation": "https://www.home-assistant.io/integrations/nationalrailuk",
+    "documentation": "https://github.com/jfparis/homeassistant_nationalrail",
     "requirements": ["zeep[async]"],
     "ssdp": [],
     "zeroconf": [],
