Added departures and arrivals to the instance

--- a/custom_components/nationalrailuk/manifest.json
+++ b/custom_components/nationalrailuk/manifest.json
@@ -2,13 +2,13 @@
     "domain": "nationalrailuk",
     "name": "National Rail UK",
     "config_flow": true,
-    "documentation": "https://github.com/jfparis/homeassistant_nationalrail",
+    "documentation": "https://github.com/plutomedia987/homeassistant_nationalrail",
     "requirements": ["zeep[async]==4.2.1"],
     "ssdp": [],
     "zeroconf": [],
     "homekit": {},
     "dependencies": [],
     "version": "0.0.1",
-    "codeowners": ["@jfparis"],
+    "codeowners": ["@plutomedia987"],
     "iot_class": "cloud_polling"
 }
